// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GateKeeperContract on deposit collateral should forward message to positionsManager and have msg.amount left on gatekeeper balance 1`] = `
[
  {
    "$seq": 3,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{C46CCBB6800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A2E90EDD001_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQA8J7zdze7xzxWC0UEFLI_ebJedZgQbQuay8b9oAkTSWQkO",
          "to": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
          "type": "internal",
          "value": 101000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14809n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{DDED1FE8800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A2E90EDD0008F0D180000000004000013880000520877359400C822BBBC93DE43555_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 978329000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 4,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
          "type": "internal",
          "value": 977329000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8135n,
      },
    ],
  },
]
`;

exports[`GateKeeperContract on increase total stable should add total stables count 1`] = `
[
  {
    "$seq": 7,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{96096519800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD001_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13164n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "empty",
            },
            "bounce": false,
            "from": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
            "to": "kQA8J7zdze7xzxWC0UEFLI_ebJedZgQbQuay8b9oAkTSWQkO",
            "type": "internal",
            "value": 985836000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`GateKeeperContract on pool settings msg should store new settings  1`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{A10722D947868C0000000002000009C400002904}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "to": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15276n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "pool settings updated",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
            "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
            "type": "internal",
            "value": 983424000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`GateKeeperContract on repayStablecoinUserMessage should send enhanced message to positionsAddressManager 1`] = `
[
  {
    "$seq": 8,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{DE1FA942800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A2E90EDD001_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQA8J7zdze7xzxWC0UEFLI_ebJedZgQbQuay8b9oAkTSWQkO",
          "to": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14286n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{6C3989BB800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD0008F0D180000000004000013880000520877359400C822BBBC93DE43555_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 984023000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`GateKeeperContract on withdrawstablecoins should forward message to positionsManager with current settings and price 1`] = `
[
  {
    "$seq": 5,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{705FE53E800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A2E90EDD001_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQA8J7zdze7xzxWC0UEFLI_ebJedZgQbQuay8b9oAkTSWQkO",
          "to": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14183n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{6C3989BB800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD0008F0D180000000004000013880000520877359400C822BBBC93DE43555_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 984126000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 6,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
          "type": "internal",
          "value": 983126000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8135n,
      },
    ],
  },
]
`;

exports[`GateKeeperContract should deploy correctly 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{5A2ADFF2801075E834DF4F15E107E94B1EDF44C910774A333E3C6B7B2F37E39B16FED191AD90029B0D3E36F9DAA7A17CB3EEFBC971186DDB85B5DFDB4AC98366EE9E613E0ECBE2_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "to": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15943n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "deps set",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
            "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
            "type": "internal",
            "value": 982861000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`GateKeeperContract should set ton price 1`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{0D11BABDBEBC2000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "to": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14736n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "ton price updated",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBrMIVDTwvNGs9An7Y_GB-oXpPiM39ZoObutITWBvuOu2Dl",
            "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
            "type": "internal",
            "value": 983996000n,
          },
        ],
      },
    ],
  },
]
`;
